--- a/CSS/about-style.css
+++ b/CSS/about-style.css
@@ -26,7 +26,8 @@
 }
 
 .bread-crumbs ul{
-    padding-bottom: 33px;
+    padding-bottom: 89px;
+    padding-left: 0;
 }
 .bread-crumbs ul{
     display: flex;
