--- a/CSS/home-style.css
+++ b/CSS/home-style.css
@@ -5,18 +5,15 @@ a.more-btn{
     font-size: 24px;
     font-weight: bold;
     padding: 16px 160px;
-    font-weight: bold;
     border-radius: 40px;
     border: 3px solid;
     color: #60222B;
 }
-img{
-    border-radius: 25px;
-}
 
 
 
-.banner{
+
+.home-banner{
     height: 1000px;
     margin: auto;
     width: 100%;
@@ -25,7 +22,7 @@ img{
 
 }
 
-.head-bg{
+.homehead-bg{
     width: 100%;
     height: 450px;
     background-color: #E3D1AD;
