--- a/CSS/introduce-style.css
+++ b/CSS/introduce-style.css
@@ -1,30 +1,3 @@
-.banner{
-    height: 435px;
-    margin: auto;
-    width: 100%;
-    background-size: cover;
-    background-image: url("https://picsum.photos/1920/435/?random=10");
-
-}
-
-.head-bg{
-    width: 100%;
-    height: 450px;
-    background-color: #E3D1AD;
-    position: absolute;
-    top: 372px;
-}
-.head-bg h1{
-    font-size: 52px;
-    margin-top: 76px;
-    text-align: center;
-
-}
-
-.wrap-item{
-    padding: 40px 92px 130px 92px;
-}
-
 .bread-crumbs ul{
     padding-bottom: 89px;
     padding-left: 0;
@@ -61,9 +34,10 @@
     padding-right: 62px;
 }
 
+.pic{
+    width: 43%;
+}
 .item .pic img{
-    width: 100%;
-    vertical-align: middle;
     border-radius: 50%;
     overflow: hidden;
 }
