--- a/CSS/products-style.css
+++ b/CSS/products-style.css
@@ -1,36 +1,3 @@
-img{
-    width: 100%;
-    vertical-align: middle;
-    border-radius: 25px;
-}
-
-.banner{
-    height: 435px;
-    margin: auto;
-    width: 100%;
-    background-size: cover;
-    background-image: url("https://picsum.photos/1920/435/?random=10");
-
-}
-
-.head-bg{
-    width: 100%;
-    height: 450px;
-    background-color: #E3D1AD;
-    position: absolute;
-    top: 372px;
-}
-.head-bg h1{
-    font-size: 52px;
-    margin-top: 52px;
-    text-align: center;
-
-}
-
-.wrap-item{
-    padding: 40px 92px 130px 92px;
-}
-
 
 .bread-crumbs ul{
     padding-bottom: 89px;
@@ -79,8 +46,10 @@ h2{
     margin: 0;
 }
 a.card{
-    display: inline-block;
-    width: 100%;
+    height: 100%;
+    display: block;
+    display: flex;
+    flex-direction: column  ;
     background-color: #F0F1F3;
     text-decoration: none;
     border-radius: 25px;
@@ -91,17 +60,21 @@ a.card{
     flex-wrap: wrap;
     justify-content: center;
     padding: 25px;
+    flex-grow: 1;
 }
 a.card h3{
-    font-size: 21px;
+    font-size: 24px;
     font-weight: bold;
-    margin: 0;
-    padding-bottom: 13px;
+    margin-top: 0;
+    flex-grow: 1;
 }
 .below{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+.below span{
+    padding: 0;
 }
 .below .shop i{
     font-size: 24px;
