--- a/CSS/qna-style.css
+++ b/CSS/qna-style.css
@@ -25,6 +25,7 @@
 }
 
 .item{
+    width: 50vw;
     margin: auto;
     padding: 25px 0px;
 }
@@ -37,7 +38,7 @@
     border-radius: 50px;
     align-items: center;
 }
-.question h3{
+.question h5{
     color: #60222B;
     font-size: 24px;
     line-height: 66px;
@@ -52,7 +53,25 @@
     padding: 30px 40px;
     background-color: #F0F1F3;
     border-radius: 0 0 25px 25px;
+    display: none;
 }
 .answer p span{
     font-weight: 450;
+}
+
+label.q-1 i.fa-plus{
+    display: none;
+}
+
+input#question-1[type="checkbox"] {
+    display: none;
+}
+#question-1:checked ~.answer{
+    display: block;
+}
+#question-1:checked ~.question label.q-1 i.fa-plus{
+    display: block;
+}
+#question-1:checked ~.question label.q-1 i.fa-minus{
+    display: none;
 }
