--- a/CSS/nav-footer.css
+++ b/CSS/nav-footer.css
@@ -8,7 +8,7 @@
 .logo{
     position: absolute;
     z-index: 2;
-    left: 10.9%;
+    left: 100px;
     background-color: #401202;
     border-radius: 0 0 25px 25px;
     padding: 20px 9px;
