--- a/CSS/home-style.css
+++ b/CSS/home-style.css
@@ -21,9 +21,9 @@ a.more-btn{
 
 .homehead-bg{
     width: 100%;
-    height: 550px;
+    height: 450px;
     margin: auto;
-    background-image: url("../images/Mask\ group.png");
+    background-image: url("../images/head-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
